@startuml er-diagram
title Diagrama Entidad-Relación - Base de Datos "gastos" (MySQL)

skinparam linetype ortho
hide circle

entity "category" as category {
    * id : VARCHAR(20) <<PK>>
    --
    * name : VARCHAR(50)
      icon : VARCHAR(50)
      description : VARCHAR(200)
      sort_order : INT
}

entity "app_user" as app_user {
    * id : VARCHAR(36) <<PK>>
    --
    * dni : VARCHAR(8) <<UNIQUE>>
    * password : VARCHAR(100)  '' hash BCrypt
    * first_name : VARCHAR(60)
    * last_name : VARCHAR(60)
      second_last_name : VARCHAR(60)
      email : VARCHAR(120)
    * role : VARCHAR(20)
      created_at : TIMESTAMP
}

entity "expense" as expense {
    * id : VARCHAR(36) <<PK>>
    --
    * amount : DECIMAL(12,2)
    * currency : VARCHAR(3)  '' PEN | USD
    * description : VARCHAR(80)
    * category_id : VARCHAR(20) <<FK>>
    * user_id : VARCHAR(36) <<FK>>
    * date : DATE
      created_at : TIMESTAMP
      updated_at : TIMESTAMP
}

entity "user_settings" as user_settings {
    * user_id : VARCHAR(36) <<PK>> <<FK>>
    --
      monthly_income : DECIMAL(12,2)  '' ingreso mensual de referencia (PEN)
    * alerts_enabled : BIT
      updated_at : TIMESTAMP
}

' Relación 1 categoría -- N gastos
category ||--o{ expense : "1 .. N"
' Relación 1 usuario -- N gastos
app_user ||--o{ expense : "1 .. N"
' Relación 1 usuario -- 0..1 configuración (PK compartida)
app_user ||--o| user_settings : "1 .. 0..1"

@enduml
